tmp/root/iptables-nat.txt
Chain PREROUTING (policy ACCEPT 30397 packets, 7669K bytes)
 pkts bytes target     prot opt in     out     source               destination         
   28  5014 CILIUM_PRE_nat  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cilium-feeder: CILIUM_PRE_nat */
30397 7669K KUBE-SERVICES  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */

Chain INPUT (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         

Chain OUTPUT (policy ACCEPT 25289 packets, 1518K bytes)
 pkts bytes target     prot opt in     out     source               destination         
   34  2166 CILIUM_OUTPUT_nat  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cilium-feeder: CILIUM_OUTPUT_nat */
25447 1528K KUBE-SERVICES  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */

Chain POSTROUTING (policy ACCEPT 25281 packets, 1518K bytes)
 pkts bytes target     prot opt in     out     source               destination         
   34  2166 CILIUM_POST_nat  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* cilium-feeder: CILIUM_POST_nat */
25439 1527K KUBE-POSTROUTING  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes postrouting rules */

Chain CILIUM_OUTPUT_nat (1 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain CILIUM_POST_nat (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 MASQUERADE  all  --  *      !cilium_+  10.42.0.0/24        !10.42.0.0/24         /* cilium masquerade non-cluster */
    0     0 ACCEPT     all  --  *      *       0.0.0.0/0            0.0.0.0/0            mark match 0xa00/0xe00 /* exclude proxy return traffic from masquerade */
    0     0 SNAT       all  --  *      cilium_host !10.42.0.0/24        !10.42.0.0/24         /* cilium host->cluster masquerade */ to:10.42.0.242
    0     0 SNAT       all  --  *      cilium_host  127.0.0.1            0.0.0.0/0            /* cilium host->cluster from 127.0.0.1 masquerade */ to:10.42.0.242
    0     0 SNAT       all  --  *      cilium_host  0.0.0.0/0            0.0.0.0/0            mark match 0xf00/0xf00 ctstate DNAT /* hairpin traffic that originated from a local pod */ to:10.42.0.242

Chain CILIUM_PRE_nat (1 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain KUBE-KUBELET-CANARY (0 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain KUBE-MARK-MASQ (4 references)
 pkts bytes target     prot opt in     out     source               destination         
  306 18360 MARK       all  --  *      *       0.0.0.0/0            0.0.0.0/0            MARK or 0x4000

Chain KUBE-NODEPORTS (1 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain KUBE-POSTROUTING (1 references)
 pkts bytes target     prot opt in     out     source               destination         
23639 1418K RETURN     all  --  *      *       0.0.0.0/0            0.0.0.0/0            mark match ! 0x4000/0x4000
  153  9180 MARK       all  --  *      *       0.0.0.0/0            0.0.0.0/0            MARK xor 0x4000
  153  9180 MASQUERADE  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service traffic requiring SNAT */ random-fully

Chain KUBE-PROXY-CANARY (0 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain KUBE-SEP-MKSKJLL2IVTF2DTP (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  all  --  *      *       10.67.0.10           0.0.0.0/0            /* kube-system/hubble-peer:peer-service */
    0     0 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/hubble-peer:peer-service */ tcp to:10.67.0.10:4244

Chain KUBE-SEP-UFFV5FRSL4UIVYLV (1 references)
 pkts bytes target     prot opt in     out     source               destination         
  158  9480 KUBE-MARK-MASQ  all  --  *      *       10.67.0.10           0.0.0.0/0            /* default/kubernetes:https */
  158  9480 DNAT       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https */ tcp to:10.67.0.10:6443

Chain KUBE-SERVICES (2 references)
 pkts bytes target     prot opt in     out     source               destination         
  153  9180 KUBE-SVC-NPX46M4PTMTKRN6Y  tcp  --  *      *       0.0.0.0/0            10.43.0.1            /* default/kubernetes:https cluster IP */ tcp dpt:443
    0     0 KUBE-SVL-NZTS37XDTDNXGCKJ  tcp  --  *      *       0.0.0.0/0            10.43.117.30         /* kube-system/hubble-peer:peer-service cluster IP */ tcp dpt:443
 3106  186K KUBE-NODEPORTS  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kubernetes service nodeports; NOTE: this must be the last rule in this chain */ ADDRTYPE match dst-type LOCAL

Chain KUBE-SVC-NPX46M4PTMTKRN6Y (1 references)
 pkts bytes target     prot opt in     out     source               destination         
  158  9480 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.0.1            /* default/kubernetes:https cluster IP */ tcp dpt:443
  158  9480 KUBE-SEP-UFFV5FRSL4UIVYLV  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https -> 10.67.0.10:6443 */

Chain KUBE-SVL-NZTS37XDTDNXGCKJ (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 KUBE-MARK-MASQ  tcp  --  *      *      !10.42.0.0/16         10.43.117.30         /* kube-system/hubble-peer:peer-service cluster IP */ tcp dpt:443
    0     0 KUBE-SEP-MKSKJLL2IVTF2DTP  all  --  *      *       0.0.0.0/0            0.0.0.0/0            /* kube-system/hubble-peer:peer-service -> 10.67.0.10:4244 */
